--- a/src/blocks/card/__description/card__description.css
+++ b/src/blocks/card/__description/card__description.css
@@ -5,3 +5,10 @@
   background: #fff;
   padding: 25px 20px;
 }
+
+.card__like {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+}
