--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,13 @@
     line-height: 17px;
   }
 }
+
+.popup__button_disabled {
+  background: #ffffff;
+  color:  rgba(0, 0, 0, 0.15);
+  border: 1px solid rgba(0, 0, 0, 0.15);
+}
+
+.popup__button_disabled:hover {
+  background: #ffffff;
+}
